Lots of changes
Fixing fractal adjusting to window size

Lots of architectural changes